--- a/ui/styles/globals.css
+++ b/ui/styles/globals.css
@@ -20,7 +20,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: black;
-    background: blue;
+    color: white;
+    background: black;
   }
 }
